# atmospheric

./: CMakeLists.txt  README
include/: grid.h  physics.h  utils.h
tests/: CMakeLists.txt  display.gnu  plot.sh  run.cpp
